<resources>
    <string name="create_account_encrypted_profile_error">howzit does not support encrypted profiles yet</string>
    <string name="create_account_load_profile_unknown">Unknown error loading profile</string>
    <string name="status_online">Online</string>
    <string name="status_away">Away</string>
    <string name="status_busy">Busy</string>
    <string name="status_offline">Offline</string>
    <string name="permission_location">Location</string>
    <string name="permission_camera">Camera</string>
    <string name="permission_storage">Storage</string>
    <string name="permission_contacts">Contacts</string>
    <string name="permission_deny_prompt">Our app requires <Data><![CDATA[<font color="#000000"><b>%1$s</b></font>]]></Data> access to function normally. Please enable <Data><![CDATA[<font color="#000000"><b>%2$s</b></font>]]></Data> services in Settings.</string>
    <string name="create_account">Create Account</string>
    <string name="hint_account_name">Username</string>
    <string name="hint_account_pwd">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="input_user_name_prompt">Please input your user name!</string>
    <string name="input_user_pwd_prompt">Please input your password!</string>
    <string name="user_not_exist">Sorry, the user %1$s Not Exist,Please check it!</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="oops">Oops</string>
    <string name="import_account">Import Account > </string>
    <string name="select_file">Select File</string>
    <string name="select_folder">Select Folder</string>
    <string name="import_profile_invalid_file">The chosen file is not a valid howzit </string>
    <string name="user_has_exist">User already exists, please login!</string>
    <string name="sign_up_failed">Sorry, create Account Failed</string>
    <string name="login_from_file_failed">Sorry, import file Failed</string>
    <string name="message">Message</string>
    <string name="contacts">Contacts</string>
    <string name="mine">Mine</string>
    <string name="Post">post</string>
    <string name="T">Translate</string>
    <string name="default_signature">Hey! I\'m using HOWZIT</string>
    <string name="status">Status</string>
    <string name="off_line">Offline</string>
    <string name="on_line">Online</string>
    <string name="away">Away</string>
    <string name="busy">Busy</string>
    <string name="my_tok_id_prompt">My howzit ID</string>
    <string name="security_privacy">Security and Privacy</string>
    <string name="about_us">About howzit</string>
    <string name="setting">Setting</string>
    <string name="my_tok_id">My howzit ID</string>
    <string name="group_tok_id">Group howzit ID</string>
    <string name="tok_id">howzit ID</string>
    <string name="copy">Copy</string>
    <string name="copy_success">Copy Success</string>
    <string name="add_friends">Add Friends</string>
    <string name="confirm_add_friends">Confirm Add Friends</string>
    <string name="input_tok_id">Please input your friend\'s howzit ID</string>
    <string name="tok_id_invalid">howzit ID is invalid,Please check again!</string>
    <string name="can_not_add_yourself">You cannot add yourself</string>
    <string name="add_friend_friend_exists">Friend added already</string>
    <string name="add_friend_default_message">Hey! I\'m %1$s</string>
    <string name="add_friend_request_has_send">Add friend request has send</string>
    <string name="add_friend_msg_hint">Input your message</string>
    <string name="add_friend_in_id">Add friends in howzit ID</string>
    <string name="invite_friend">Invite friends</string>
    <string name="scan">Scan</string>
    <string name="scan_prompt">Put the qr code into the box and it will scan automatically</string>
    <string name="qr_code_not_found">Didn\'t found QR code</string>
    <string name="account_info">Account Info</string>
    <string name="account_name">Account Name</string>
    <string name="export_profile">Export Profile</string>
    <string name="export_success">Exported data file to %s</string>
    <string name="export_failed">Error: Could not export data file.</string>
    <string name="app_down_load_url">https://fir.im/tokandroid</string>
    <string name="new_friends_request">New friends request</string>
    <string name="group">Group</string>
    <string name="refuse">Refuse</string>
    <string name="accept">Accept</string>
    <string name="share_with">Share with</string>
    <string name="request_msg">Request Message</string>
    <string name="friend_accepted_default_status">Friend Accepted</string>
    <string name="fail_try_again">Sorry, failed. Please try again!</string>
    <string name="successful">Successful</string>
    <string name="send">Send</string>
    <string name="share_my_id">I\'m %1$s,I\'m using Tok,and my howzit ID is:%2$s</string>
    <string name="share_my_group_id">I\'m %1$s,I\'m using Tok,and my group howzit ID is:%2$s</string>
    <string name="version">Version:%1$s</string>
    <string name="personal_info">Personal information</string>
    <string name="friend_info">Friend information</string>
    <string name="my_avatar">MyPicture</string>
    <string name="nick_name">Nickname</string>
    <string name="bio">Bio</string>
    <string name="user_name_prompt">Username: %1$s</string>
    <string name="group_nick_name">Group NickName: %1$s</string>
    <string name="friend_is_online">Your friend is online</string>
    <string name="friend_is_offline">Your friend is offline</string>
    <string name="input_msg">Please input your message!</string>
    <string name="file_sel_wrong">Something is wrong with the File or Folder which your selected,Try again!</string>
    <string name="send_file_need_online">Sorry, send file need your friend online!</string>
    <string name="create_group">Create Group</string>
    <string name="my_group">My Group</string>
    <string name="group_info">Group Info</string>
    <string name="create">Create</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="add_member">Add Member</string>
    <string name="remove_member">Remove Member</string>
    <string name="prompt_group_Id">Group ID</string>
    <string name="input_group_name">Please input your group name!</string>
    <string name="sel_group_member_name">Please select group members!</string>
    <string name="rename">Rename</string>
    <string name="edit">Edit</string>
    <string name="group_member_num">Members (%1$s)</string>
    <string name="del_group">Delete Group</string>
    <string name="del_member">Delete %1$s</string>
    <string name="member_edit">Member Edit</string>
    <string name="choose_member">Choose Member</string>
    <string name="choose_one_friend">Choose one friend at least, please</string>
    <string name="select">Select</string>
    <string name="input_msg_same_to_origin">Input message is same to origin message!</string>
    <string name="service_notify_title">Tok</string>
    <string name="service_notify_content">Tok is running</string>
    <string name="file_not_exist">Sorry, file not exist</string>
    <string name="play_failed">Sorry, file play failed!</string>
    <string name="time_second">%1$s″</string>
    <string name="default_group_title">Group%1$s</string>
    <string name="default_group_signature">howzit Group, talk free</string>
    <string name="scan_content_invalid">Scan content invalid</string>
    <string name="not_support_group">Scan not support Group</string>
    <string name="more">More</string>
    <string name="invited_has_sent">invitation has sent</string>
    <string name="yesterday">Yesterday</string>
    <string name="delete">Delete</string>
    <string name="mark_read">Mark Readed</string>
    <string name="percent">%1$s%%</string>
    <string name="type_photo">[Photo]</string>
    <string name="type_file">[File]</string>
    <string name="type_audio">[Audio]</string>
    <string name="type_video">[Video]</string>
    <string name="type_draft"> <Data><![CDATA[<font color="#e52828">[Draft]</font>]]></Data> %1$s</string>
    <string name="group_name">Group Name</string>
    <string name="all_members">All Members ></string>
    <string name="mute_notification">Mute Notifications</string>
    <string name="hold_to_talk">Hold to Talk</string>
    <string name="release_to_send">Release to Send</string>
    <string name="release_to_cancel">Release to Cancel</string>
    <string name="slide_to_cancel">Slide to Cancel</string>
    <string name="slide_up_to_cancel">Slide up to Cancel</string>
    <string name="user_name">Username</string>
    <string name="alias_name">Alias Name</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="save">Save</string>
    <string name="send_txt_need_online">Send message need your friend or OfflineBot online</string>
    <string name="album">Album</string>
    <string name="camera">Camera</string>
    <string name="edit_avatar">Edit MyPicture</string>
    <string name="clipping_image">Clipping Image</string>
    <string name="clip">Clip</string>
    <string name="group_create_hello">Hi! Welcome to %1$s</string>
    <string name="add_contact">Add Contact</string>
    <string name="remove_leave">Remove and Leave</string>
    <string name="ok">OK</string>
    <string name="confirm_remove">Confirm Remove?</string>
    <string name="p2p_encrypt_empty">Peer-to-peer communication, end-to-end encryption, click for more information></string>
    <string name="p2p_encrypt_chat">Messages to this chat and calls are now secured with peer-to-peer communication, end-to-end encryption. Tap for more information ></string>
    <string name="friend_chat_safe">Secure chat, no third party listen in</string>
    <string name="chat_safe_file_name">tok_safe.html</string>
    <string name="slogon">Make the world connect freely!</string>
    <string name="share_qr_content">https://www.tok.life?#%1$s#</string>
    <string name="share_info_add_me">Hello,I\'m <Data><![CDATA[<font color="#000000"><b>%1$s</b></font><br>I\'m in Tok,peer-to-peer encrypted chat!]]></Data></string>
    <string name="share_txt_prompt">Peer-to-peer encrypted chat, I\'m in howzit, click https://www.tok.life,free download howzit app. If you installed it, please copy this text $%1$s$, open Tok can add me as friends</string>
    <string name="share_way_txt">Share by Text</string>
    <string name="share_way_img">Share by Image</string>
    <string name="share_long_click_info">Long press this picture a minute, extract the QR code, download the app\n Open howzit and scan this QR code, add me as a friend</string>
    <string name="scan_my_qr_prompt">Scan the QR code to add me on howzit</string>
    <string name="add_friend_request">Add Friend Request</string>
    <string name="tok_id_prompt">Tok:ID</string>
    <string name="guide_title1">Do not require any Phone number</string>
    <string name="guide_content1">automatically generate random super-long ID, does not associate any real-name information</string>
    <string name="guide_title2">invisible IP</string>
    <string name="guide_content2">Hidden IP address by onion routing, unable to track your location </string>
    <string name="guide_title3">peer-to-peer encrypted message</string>
    <string name="guide_content3">automatically generates super-long key, it takes 9.9 billions years to violently crack-copy version</string>
    <string name="enter_app">Enter the howzit</string>
    <string name="hint_confirm_pwd">Repeat Password</string>
    <string name="input_exceed_length">The input cannot exceed %1$s characters</string>
    <string name="sel_tok_file">Select your howzit profile</string>
    <string name="clear_chat_history">Clear Chat History</string>
    <string name="del_profile">Delete Profile</string>
    <string name="export_profile_path">%1$s has been stored in\n%2$s</string>
</resources>